# baseon-buddy-compiler

./: README.md  装环境.md
BaseQ&&A/: baseQuestion.md
BaseQ&&A/Q1A/: Q1&&A.md  README.md
BaseQ&&A/Q1A/benchmark/: CMakeLists.txt
BaseQ&&A/Q1A/benchmark/Vectorization/: CMakeLists.txt
BaseQ&&A/Q1A/benchmark/Vectorization/gccloops/: CMakeLists.txt
BaseQ&&A/Q2A/: Q2&&A.md  README.md
BaseQ&&A/Q2A/benchmark/Vectorization/gccloops/: Main.cpp
BaseQ&&A/Q3A/: CMakeLists.txt  MLIRGccLoopsEx1Benchmark.cpp  MLIRGccLoopsEx1DynVecBenchmark.cpp  MLIRGccLoopsEx1VecBenchmark.cpp  Main.cpp  Q3&&A.md  README.md  toolchain-riscv64.cmake
BaseQAndA/: README.md
BaseQAndA/Q1A/: README.md
BaseQAndA/Q1A/benchmark/: CMakeLists.txt
BaseQAndA/Q1A/benchmark/Vectorization/gccloops/: CMakeLists.txt
BaseQAndA/Q2A/: CMakeLists.txt  README.md
BaseQAndA/Q2A/benchmark/: CMakeLists.txt
BaseQAndA/Q2A/benchmark/Vectorization/: CMakeLists.txt
BaseQAndA/Q2A/benchmark/Vectorization/gccloops/: CMakeLists.txt
BaseQAndA/Q3A/: CMakeLists.txt  MLIRGccLoopsEx1DynVec.mlir  MLIRGccLoopsEx1DynVecBenchmark.cpp  MLIRGccLoopsEx1Vec.mlir  README.md  makefile  toolchain-riscv64.cmake
BaseQAndA/Q3A/benchmark/: CMakeLists.txt  MLIRGccLoopsEx1DynVecBenchmark.cpp  MLIRGccLoopsEx1Vec.mlir  MLIRGccLoopsEx1VecBenchmark.cpp
